[package]
name = "benching_polynomials"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false }
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic"] }
rand = "0.9"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
